--- a/MVC_SQL_Project/Views/TimeSheets/Grid.cshtml
+++ b/MVC_SQL_Project/Views/TimeSheets/Grid.cshtml
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-md-5">
             @grid.GetHtml(
-           htmlAttributes: new { @id = "WebGrid1", @class = "table table-bordered table-hover" },
+           htmlAttributes: new { @id = "WebGrid1", @class = "table table-bordered" },
            columns: grid.Columns(
                grid.Column("Id", "Id"),
                grid.Column("Story", "Story"),
