--- a/MVC_SQL_Project/Views/TimeSheets/Index.cshtml
+++ b/MVC_SQL_Project/Views/TimeSheets/Index.cshtml
@@ -1,27 +1,24 @@
-﻿@model MVC_SQL_Project.Models.TimeSheet
+﻿@model MVC_SQL_Project.Models.LoginInfo
+
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Time Entry System</h2>
-
 <div>
-    <div>
-        <div>
-            <label>Select A Name</label>
-        </div>
-        <div>
-            <select class="form-control" id="Names" name="Name Of Student">
-                <option value="0">Select a Name</option>
-                <option>Saiteja</option>
-                <option>Lakshman</option>
-                <option>Vinay</option>
-                <option>Praneeth</option>
-            </select>
-        </div>
-    </div>
-    <div style="padding-top:30px">
-        @Html.ActionLink("GO", "Details", "TimeSheets", null, new { @class = "btn btn-primary" })
-    </div>
+    @Html.ValidationSummary(false, null, new { @class = "text-danger" })
 </div>
 
+@using (Html.BeginForm())
+{
+    <div class="form-group">
+        @Html.LabelFor(x => x.UserName)
+        @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", autocomplete="off" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(x => x.Password)
+        @Html.TextBoxFor(x => x.Password, new { @class = "form-control", type = "password" })
+    </div>
+    <div class="form-group">
+        <button id="CmdSubmit" type="submit" class="btn btn-outline-secondary">Log In</button>
+    </div>
+}
